# CA-Vote-Search

./: .gitignore  .prettierrc  LICENSE  README.md  package.json  pyproject.toml  svelte.config.js  tailwind.config.ts  theme.ts  tsconfig.json
load_data/: _cli.py  _download_files.py  _parse_data.py  _paths.py
src/: app.html
src/lib/: constants.ts
src/lib/components/: Autocomplete.svelte  Icon.svelte  Link.svelte  TextInput.svelte  index.ts
src/lib/icons/: index.ts
src/lib/utils/: index.ts  searchOptions.ts
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
src/routes/search/: +page.svelte
